...
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.RoundedShape"
      profile:src="@{profile.avatar}" />

    <TextView
      android:id="@+id/profile_list_name"
      style="@style/TextViewStart"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:fontFamily="sans-serif"
...
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/profile_list_image"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/profile_list_admin_text"
      style="@style/TextViewStart"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:fontFamily="sans-serif"
...
