...

    <TextView
      android:id="@+id/profile_is_admin_text"
      style="@style/AdministratorLabelStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/profile_chooser_admin"
      android:visibility="@{viewModel.profile.isAdmin ? View.VISIBLE : View.GONE}" />
  </LinearLayout>
</layout>

